Fixed block text align

--- a/src/styles/syllabits.css
+++ b/src/styles/syllabits.css
@@ -2,6 +2,7 @@
     width: 80px;
     height: 50px;
     line-height: 50px;
+    text-align: center;
     border-radius: 8px;
     letter-spacing: 3pt;
     font-weight: bold;
